@@ -381,7 +381,7 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
         for (String name : processorNames) {
             try {
                 Class<?> clazz = Class.forName(name, true, cl);
-                Object instance = clazz.newInstance();
+                Object instance = clazz.getDeclaredConstructor().newInstance();
                 if (instance instanceof Processor) {
                     result.add(new ErrorToleratingProcessor((Processor) instance));
                 }
@@ -958,7 +958,8 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
 
         private final Processor delegate;
         private ProcessingEnvironment processingEnv;
-        private boolean valid = true;
+        private boolean initFailed = false;
+        private boolean processFailed = false;
 
         public ErrorToleratingProcessor(Processor delegate) {
             this.delegate = delegate;
@@ -966,7 +967,7 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
 
         @Override
         public Set<String> getSupportedOptions() {
-            if (!valid) {
+            if (initFailed) {
                 return Collections.emptySet();
             }
             return delegate.getSupportedOptions();
@@ -974,7 +975,7 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
 
         @Override
         public Set<String> getSupportedAnnotationTypes() {
-            if (!valid) {
+            if (initFailed) {
                 return Collections.emptySet();
             }
             return delegate.getSupportedAnnotationTypes();
@@ -982,7 +983,7 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
 
         @Override
         public SourceVersion getSupportedSourceVersion() {
-            if (!valid) {
+            if (initFailed) {
                 return SourceVersion.latest();
             }
             return delegate.getSupportedSourceVersion();
@@ -993,10 +994,10 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
             try {
                 delegate.init(processingEnv);
             } catch (ClientCodeException | ThreadDeath | Abort err) {
-                valid = false;
+                initFailed = true;
                 throw err;
             } catch (Throwable t) {
-                valid = false;
+                initFailed = true;
                 StringBuilder exception = new StringBuilder();
                 exception.append(t.getMessage()).append("\n");
                 for (StackTraceElement ste : t.getStackTrace()) {
@@ -1010,16 +1011,16 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
         @Override
         @Messages("ERR_ProcessorException=Annotation processor {0} failed with an exception: {1}")
         public boolean process(Set<? extends TypeElement> annotations, RoundEnvironment roundEnv) {
-            if (!valid) {
+            if (initFailed || processFailed) {
                 return false;
             }
             try {
                 return delegate.process(annotations, roundEnv);
             } catch (ClientCodeException | ThreadDeath | Abort err) {
-                valid = false;
+                processFailed = true;
                 throw err;
             } catch (Throwable t) {
-                valid = false;
+                processFailed = true;
                 Element el = roundEnv.getRootElements().isEmpty() ? null : roundEnv.getRootElements().iterator().next();
                 StringBuilder exception = new StringBuilder();
                 exception.append(t.getMessage()).append("\n");
@@ -1033,12 +1034,11 @@ public class APTUtils implements ChangeListener, PropertyChangeListener {
 
         @Override
         public Iterable<? extends Completion> getCompletions(Element element, AnnotationMirror annotation, ExecutableElement member, String userText) {
-            if (!valid) {
+            if (initFailed) {
                 return Collections.emptySet();
             }
             return delegate.getCompletions(element, annotation, member, userText);
         }
 
     }
-
 }
