@@ -102,11 +102,8 @@ public class SwitchLookup extends Lookup {
         if (loc.instanceProviderClass() != null && loc.instanceProviderClass() != InstanceProvider.class) {
             try {
                 // Get a lookup for the new instance provider
-                lookup = getLookupForProvider(paths, loc.instanceProviderClass().newInstance());
-            } catch (InstantiationException ex) {
-                Exceptions.printStackTrace(ex);
-                lookup = Lookup.EMPTY;
-            } catch (IllegalAccessException ex) {
+                lookup = getLookupForProvider(paths, loc.instanceProviderClass().getDeclaredConstructor().newInstance());
+            } catch (ReflectiveOperationException ex) {
                 Exceptions.printStackTrace(ex);
                 lookup = Lookup.EMPTY;
             }
@@ -121,7 +118,7 @@ public class SwitchLookup extends Lookup {
     private Lookup getLookupForPaths(List<String> paths) {
         Lookup lookup = pathsLookups.get(paths);
         if (lookup == null) {
-            lookup = new FolderPathLookup(paths.toArray(new String[paths.size()]));
+            lookup = new FolderPathLookup(paths.toArray(new String[0]));
             pathsLookups.put(paths, lookup);
         }
         
@@ -129,7 +126,7 @@ public class SwitchLookup extends Lookup {
     }
 
     private Lookup getLookupForProvider(List<String> paths, InstanceProvider instanceProvider) {
-        return new InstanceProviderLookup(paths.toArray(new String[paths.size()]), instanceProvider);
+        return new InstanceProviderLookup(paths.toArray(new String[0]), instanceProvider);
     }
     
     private static List<String> computePaths(MimePath mimePath, String prefixPath, String suffixPath) {
